# crypto-engine

./: .gitignore  README.md  code-style.md  install.sh  pyproject.toml  settings.json
cryp2bot/: cb.py  cryp2bot.py
cryp2bot/bitget/: bitget.py
cryp2bot/kraken/: accountdata.py  marketdata.py
cryptoengine/: cb.py  ce.py
cryptoengine/kraken/: accountdata.py  marketdata.py
tests/: test_cryp2bot.py
tests/kraken/: test_marketdata.py
