[tool.poetry]
name = "cryp2bot"
version = "0.1.0"
description = "a bot to conquer the cryptovers"
authors = ["r0nny8000 <r0nny8000@bea2b.de>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.3"

[tool.poetry.scripts]
c2b = "cryp2bot.cryp2bot:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
