[tool.poetry]
name = "cryptoengine"
version = "0.1.0"
description = "a bot to conquer the cryptovers"
authors = ["r0nny8000 <r0nny8000@bea2b.de>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
click = "^8.1.7"
tabulate = "^0.9.0"
candlestick-chart = "^3.1.0"
python-kraken-sdk = "^3.1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.3"

[tool.poetry.scripts]
ce = "cryptoengine.ce:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
